--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -3,6 +3,22 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=0,32
-Size=401,719
+Pos=14,55
+Size=1047,719
+
+[Window][3D Viewport]
+Pos=480,266
+Size=16,16
+
+[Window][Right Menu]
+Pos=1520,45
+Size=400,1017
+
+[Window][Left Menu]
+Pos=0,45
+Size=400,1017
+
+[Window][Bottom Menu]
+Pos=400,750
+Size=1120,375
 
