--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=505,791
+Size=1007,614
 
 [Window][Dear ImGui Demo]
 Pos=14,55
@@ -12,7 +12,7 @@ Size=16,16
 
 [Window][Right Menu]
 Pos=1520,42
-Size=400,1001
+Size=400,1005
 
 [Window][Left Menu]
 Pos=0,40
@@ -28,5 +28,9 @@ Size=1120,372
 
 [Window][Scriptor]
 Pos=0,42
-Size=400,1001
+Size=400,1005
+
+[Window][Objects In Scene]
+Pos=0,42
+Size=400,1005
 
