Neef Engine Developer build V 0.0-f3
Bug Fixes

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -38,6 +38,10 @@ Size=400,1001
 Pos=563,296
 Size=807,375
 
+[Window][Choose Model##ChooseFileDlgKey]
+Pos=143,72
+Size=600,400
+
 [Table][0x0A9FF75B,4]
 RefScale=13
 Column 0  Sort=0v
@@ -55,6 +59,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xFBC5C4C0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF78ACB05,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD404E022,4]
 RefScale=13
 Column 0  Sort=0v
 
