--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=505,791
+Pos=505,681
 Size=1007,614
 
 [Window][Dear ImGui Demo]
@@ -23,8 +23,8 @@ Pos=400,750
 Size=1120,370
 
 [Window][File Manager]
-Pos=400,750
-Size=1120,372
+Pos=0,0
+Size=400,600
 
 [Window][Scriptor]
 Pos=0,42
@@ -41,6 +41,10 @@ Size=807,375
 [Window][Choose Model##ChooseFileDlgKey]
 Pos=143,72
 Size=600,400
+
+[Window][Project Selection]
+Pos=45,74
+Size=216,193
 
 [Table][0x0A9FF75B,4]
 RefScale=13
@@ -67,6 +71,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xD404E022,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7BE73F72,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC82602F4,4]
 RefScale=13
 Column 0  Sort=0v
 
